# lodge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  lodge.json
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: validate-registry.yml
crates/brain/: Cargo.toml
crates/brain/src/: ai.rs  claude.rs  context.rs  framer.rs  inference.rs  intent.rs  lib.rs  scan.rs  scout.rs
crates/clean-cabin/: Cargo.toml
crates/clean-cabin/src/: config.rs  main.rs  palette.rs
crates/clean-cabin/src/cabin_trash/: mod.rs  staging.rs
crates/clean-cabin/src/report/: mod.rs  renderer.rs  selector.rs  tiers.rs
crates/clean-cabin/src/scanner/: ai_scorer.rs  heuristics.rs  mod.rs  receipt_guard.rs  walker.rs
crates/ruleset/: Cargo.toml
crates/ruleset/rules/: linux.json  macos.json  windows.json
crates/ruleset/src/: lib.rs  loader.rs  matcher.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  main.rs
crates/runtime/src/engine/: attester.rs  executor.rs  expander.rs  extensions.rs  feed.rs  inference.rs  installer.rs  manifest.rs  mod.rs  resolver.rs  rollback.rs  scoop.rs  uninstall.rs  update.rs  verify.rs
crates/runtime/src/shim/: register.rs
crates/runtime/src/tui/: bar.rs  console.rs  ext_browser.rs  flashcard.rs  help.rs  mod.rs  onboarding.rs  palette.rs  sequence.rs  splash.rs  splash_art.rs
crates/runtime/tests/integration/: install.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  manifest.rs  placement.rs  receipt.rs
docs/: command-reference.md  manifest-spec.md  ruleset-spec.md
extensions/: lodger.json  official.json  registry.json
scripts/: gen_splash_art.py  validate_registry.py
tests/fixtures/manifests/: minimal.json
