[package]
name = "lodge-brain"
version = "0.1.0"
edition = "2021"

[dependencies]
# llama.cpp bindings — evaluate llama-cpp-2 vs llama-cpp-rs vs direct bindgen at implementation start
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dependencies.lodge-shared]
path = "../shared"
