[package]
name = "lodge-brain"
version = "0.1.0"
edition = "2021"

[features]
# Enable full llama.cpp inference. Requires cmake and a C++ compiler.
# Without this feature the brain works in deterministic mode.
# Usage: cargo build --features lodge-brain/model
model = ["dep:llama-cpp-2"]

[dependencies]
llama-cpp-2 = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dependencies.lodge-shared]
path = "../shared"
