[package]
name = "lodge-brain"
version = "0.1.0"
edition = "2021"

[features]
# Enable full llama.cpp inference. Requires cmake and a C++ compiler.
# Without this feature the brain works in deterministic mode.
# Usage: cargo build --features lodge-brain/model
model = ["dep:llama-cpp-2", "dep:encoding_rs", "dep:llama-cpp-sys-2"]

[dependencies]
llama-cpp-2 = { version = "0.1", optional = true }
llama-cpp-sys-2 = { version = "0.1", optional = true }
encoding_rs = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
genai = "0.5"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.8"
thiserror = "2.0.18"

[dependencies.lodge-shared]
path = "../shared"
