[package]
name = "clean-cabin"
version = "0.1.0"
edition = "2021"
description = "Lodge extension — interactive file system cleanup with confidence-tiered suggestions"

[[bin]]
name = "clean-cabin"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
anyhow = "1"
glob = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
genai = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
