[package]
name = "lodge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lodge"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
semver = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"

[dependencies.lodge-brain]
path = "../brain"

[dependencies.lodge-ruleset]
path = "../ruleset"

[dependencies.lodge-shared]
path = "../shared"
