[package]
name = "lodge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lodge"
path = "src/main.rs"

[lib]
name = "lodge"
path = "src/lib.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
ansi-to-tui = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
semver = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2"
tempfile = "3"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Console"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }


[dependencies.lodge-brain]
path = "../brain"

[dependencies.lodge-ruleset]
path = "../ruleset"

[dependencies.lodge-shared]
path = "../shared"
